--- a/styles.css
+++ b/styles.css
@@ -3,27 +3,120 @@ body{
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-attachment: fixed;
+    margin: 0;
+    
 }   
 
 
  h1,p {
     color: rgb(220, 241, 23); 
     position: fixed;
-    /* top: 50%; */
     left: 50%;
     font-family: 'DM Serif Display';
     
  }
 h1{
     transform: translate(-50%, -20%);
-    font-size: 180%;
+    font-size: 2.5vw;
 
 }
 p{
+    font-family:'DM Serif Display';
     transform: translate(-50%, 200%);
-    font-size: 90%;
+    font-size: 1.2vw;
     margin: 0.5% 0%;
+    
+}
+.about{
+    position: absolute;
+    top:100%;
+    transform: translate(0,-100%);
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-size: small;
+
+    
 }
 i{
-    vertical-align: middle;
+    vertical-align:text-bottom;
+
+   
+}
+a{
+    color: black;
+    text-decoration: none;
+}
+.about h2 i:nth-of-type(2){
+margin: 0 0 0 10px;
+}
+.about h2 i:nth-of-type(1){
+    margin: 0;
+}
+.card-container{
+    display: flex;
+    position:absolute;
+    top: 50%;
+    bottom: 50%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;   
+}
+
+.card1,.card2,.card3{
+    display: flex;
+    margin: 5%;
+    justify-content: center;
+    /* background-color: white; */
+    /* background-image: linear-gradient rgba(to right bottom,#1400FF,#18104E); */
+    background: linear-gradient(rgba(20, 0, 255, 0.42), rgba(24, 16, 78, 0.64));
+    height: 31.5vw;
+    width: 18vw;
+    border-radius: 14px;
+    
+}
+.card1{
+    position: relative;
+    margin-left: 120px;
+    background: linear-gradient(to right bottom,rgba(20, 0, 255, 0.42), rgba(24, 16, 78, 0.64));
+}
+.card2{
+    background: linear-gradient(to right bottom,rgba(255, 245, 0, 0.46), rgba(217, 181, 128, 0.56));
+
+}
+.card3{
+    margin-right:120px ;
+    background: linear-gradient(to right bottom,rgba(255, 0, 229, 0.15), rgba(255, 255, 255, 0.21));
+   
+}
+img{
+    margin:7% auto 35%  ;
+}
+ .text-container {
+    position: absolute;
+    bottom: 3.5%;
+    font-family: 'Alatsi', sans-serif;
+    color: white;
+    left: 0;
+    right :0;
+    font-size: 1.7vh;
+    padding: 10px;
+    width: 100%; /* Make the text container full width */
+    box-sizing: border-box; 
+    margin: 0 1.5px 0 1.5px;
+    text-align: left;
+ }
+
+     
+.card-container div {
+        transition: transform 0.3s ease-in-out;
+}
+    
+.card-container div:hover {
+        transform: scale(1.1);
+}
+    
+.card-container div:hover .text-container {
+        transform: scale(1); /* Reset scaling for the text container */
 }
