--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ margin: 0 0 0 10px;
     width: 100%;
     align-items: center;
     justify-content: center;   
+    
 }
 
 .card1,.card2,.card3{
@@ -98,14 +99,22 @@ img{
     bottom: 3.5%;
     font-family: 'Alatsi', sans-serif;
     color: white;
-    left: 0;
-    right :0;
-    font-size: 1.7vh;
-    padding: 10px;
+    font-size: 1.6vh;
+    /* padding: 10px; */
     width: 100%; /* Make the text container full width */
     box-sizing: border-box; 
-    margin: 0 1.5px 0 1.5px;
     text-align: left;
+    display: flex;
+    align-items: center;
+    /* padding-left: 2vh;
+    padding-right: 2vh;
+    padding-bottom: 2vh;
+    padding-top: 1vh;
+    padding-bottom: 1vh; */
+    /* bottom: 0.5vh; */
+    width: 90%;
+    /* bottom: 3vh; */
+    height: 7vh;
  }
 
      
