--- a/styles.css
+++ b/styles.css
@@ -104,19 +104,29 @@ margin: 0 0 0 10px;
     background: linear-gradient(to right bottom,rgba(20, 0, 255, 0.42), rgba(24, 16, 78, 0.35));
 }
 .card2{
+    position: relative;
     background: linear-gradient(to right bottom,rgba(255, 245, 0, 0.46), rgba(217, 181, 128, 0.56));
 
 }
 .card3{
+    position: relative;
     background: linear-gradient(to right bottom,rgba(255, 0, 229, 0.43), rgba(255, 255, 255, 0.21));
    
 }
 .card4{
+    position: relative;
     /* margin-right: 120px; */
     background: linear-gradient(to right bottom,rgba(255,0,0,0.61),rgba(253,255,255,0.60));
 }
 img{
-    margin:7% auto 35%  ;
+    position: absolute;
+    /* margin-top:7% ;
+    margin-left: 7%;
+    margin-right: 7%;
+    margin-bottom: 0; */
+    height: 75%;
+    margin:7% 0 0 0;
+
 }
  .text-container {
     position: absolute;
@@ -124,12 +134,11 @@ img{
     color: white;
     font-size: 1vw;
     width: 87%; /* Make the text container full width */
-    box-sizing: border-box; 
     text-align: left;
-    display: flex;
     align-items: center;
-    height: 7vh;
-    margin-top:21vh;
+    /* height: 7vh; */
+    bottom: 0;
+    margin-bottom: 5%;
     
     
  }
