--- a/styles.css
+++ b/styles.css
@@ -51,18 +51,20 @@ p{
     margin: 0;
     padding: 0;
     text-align: center;
-    font-size: small;
+    font-size: 1vw;
 
     
 }
 i{
     vertical-align:text-bottom;
 
+
    
 }
 a{
     color: rgba(220, 241, 23,0.3);
     text-decoration: none;
+
 }
 .about h2 i:nth-of-type(2){
 margin: 0 0 0 10px;
