--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body{
     background-attachment: fixed;
     margin: 0;
     /* background-image:url("back.jpg"); */
+    padding: 0;
     
     
 }  
@@ -27,24 +28,23 @@ body::before {
 }
  h1,p {
     color: rgb(220, 241, 23); 
-    position: fixed;
-    left: 50%;
+    position: relative;
     font-family: 'DM Serif Display';
-    margin:1vw 0;
+    margin: 0;
+    
+    
     
  }
-h1{
-    transform: translate(-50%, -20%);
-    font-size: 2.5vw;
-
-}
-p{
-    font-family:'DM Serif Display';
-    transform: translate(-50%, 200%);
-    font-size: 1.2vw;
-    margin: 0.5% 0%;
+ .h1Background{
+    background-color: black;
+    margin: 0;
+    text-align: center;
+    padding: 0.6%;
     
-}
+ }
+ 
+
+
 .about{
     position: absolute;
     top:100%;
@@ -54,6 +54,7 @@ p{
     padding: 0;
     text-align: center;
     font-size: 0.7em;
+    
 
     
 }
@@ -85,7 +86,7 @@ margin: 0 0 0 10px;
     z-index: 2;
     margin: auto 0 auto 0;
     padding: 0;
-
+    /* filter: opacity(0.5); */
     
 }
 
@@ -171,12 +172,6 @@ img{
     opacity: 1;
     transition: opacity 0.5s ease-in-out;
     
-}
-.card1:hover img,
-.card2:hover img,
-.card3:hover img,
-.card4:hover img{
-    opacity: 0;
 }
 .card1 video,.card2 video,.card3 video,.card4 video {
     width: 85%;
