--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body{
     background-size: cover;
     height: 100vh;
     font-family: "DM Serif Display";
+    overflow: hidden;
 }
 .hidden{
     display: none;
@@ -22,13 +23,17 @@ h1{
     font-size: 2rem;
 }
 h2{
-    font-size: 1vw;
+    font-size: 0.9vw;
+    color: rgba(255, 255, 255,0.7);
+    text-decoration: none;
+    font-weight: normal;
+    font-family: "DM Serif Display";
 }
 .blackdiv{
     margin: 0;
     min-height: 100px;
     padding: 0 7px;
-    background-color: rgba(0, 0, 0,0.75);
+    background-color: rgba(0, 0, 0,0.60);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,11 +91,12 @@ h2{
 
 
 .card{
-    min-height: 350px;
+    max-height: 500px;
     height: auto;
-    width: 20%;
+    width: 17%;
     overflow: hidden;
     margin:2%;
+    transition: transform 0.3s ease-in-out;
 }
 .card img {
     width: 90%; /* Make the image fill the entire width of the card */
@@ -101,6 +107,9 @@ h2{
 .card h2{
     margin: 0;
     padding: 5%;
+}
+.card:hover{
+    transform: scale(1.1);
 }
 
 
