--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body{
 }
 .hidden{
     display: none;
+    /* opacity: 0; */
 }
 .opacity{
     opacity:0;
@@ -28,6 +29,13 @@ h2{
     text-decoration: none;
     font-weight: normal;
     font-family: "DM Serif Display";
+}
+h6{
+    margin: 0;
+    color: rgb(0, 0, 0);
+    font-weight: normal;
+    letter-spacing: 0.5px;
+    font-size: 0.9vw;
 }
 .blackdiv{
     margin: 0;
@@ -91,14 +99,14 @@ h2{
 
 
 .card{
-    max-height: 500px;
+    max-height: 1000px;
     height: auto;
     width: 17%;
     overflow: hidden;
     margin:2%;
     transition: transform 0.3s ease-in-out;
 }
-.card img {
+.card img,.card video{
     width: 90%; /* Make the image fill the entire width of the card */
     height: auto; /* Maintain the aspect ratio */
     border-radius: 10px; /* Apply border-radius to the image, matching the card */
@@ -110,6 +118,40 @@ h2{
 }
 .card:hover{
     transform: scale(1.1);
+} 
+.popUp{
+    background-color: rgba(230, 230, 230, 0.5);
+    position: fixed;
+    width: 18%;
+    height: auto;
+    text-align: left;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 999;
+    margin: 0;
+    padding: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    
 }
+.button-32 {
+    background-color: #ffee00d0;
+    color: #000;
+    font-weight: normal;
+    padding: 4px 5px;
+    text-align: center;
+    box-sizing: border-box;
+    border: 0;
+    font-size: 10px;
+    margin: 10px 0 0 0;
+    width: auto;
+    font-size: 0.9vw;
+    border-radius: 10px;
+  }
+
 
 
