--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,10 @@ body{
     background-image: url(backd.png);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:auto;
     height: 100vh;
     font-family: "DM Serif Display";
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 .hidden{
     display: none;
@@ -32,7 +32,7 @@ h2{
 }
 h6{
     margin: 0;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-weight: normal;
     letter-spacing: 0.5px;
     font-size: 0.9vw;
@@ -74,6 +74,7 @@ h6{
     position: relative;
     display: flex;
     flex-direction: column;
+    
 }
 .card2{
     border-radius: 10px;
@@ -100,15 +101,16 @@ h6{
 
 .card{
     max-height: 1000px;
-    height: auto;
+    height: 31vw;
     width: 17%;
     overflow: hidden;
     margin:2%;
-    transition: transform 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out,box-shadow 0.3s ease-in-out;;
+    
 }
-.card img,.card video{
+.card img,.card-video{
     width: 90%; /* Make the image fill the entire width of the card */
-    height: auto; /* Maintain the aspect ratio */
+    height: 80%; /* Maintain the aspect ratio */
     border-radius: 10px; /* Apply border-radius to the image, matching the card */
     margin: 5% auto 0;
 }
@@ -118,9 +120,11 @@ h6{
 }
 .card:hover{
     transform: scale(1.1);
+    box-shadow: 0 0 20px 10px #a4a05b;
+    
 } 
 .popUp{
-    background-color: rgba(230, 230, 230, 0.5);
+    background-color: rgb(0, 0, 0);
     position: fixed;
     width: 18%;
     height: auto;
@@ -152,6 +156,9 @@ h6{
     font-size: 0.9vw;
     border-radius: 10px;
   }
-
+.card-video{
+    display: none;
+    object-fit: cover;
+}
 
 
