--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
     background-image: url(backd.png);
     background-position: center;
     background-repeat: no-repeat;
-    background-size:auto;
+    background-size:cover;
     height: 100vh;
     font-family: "DM Serif Display";
     /* overflow: hidden; */
