--- a/styles.css
+++ b/styles.css
@@ -120,9 +120,19 @@ h6{
 }
 .card:hover{
     transform: scale(1.1);
-    box-shadow: 0 0 20px 10px #a4a05b;
-    
 } 
+.card1:hover{
+    box-shadow: 0 0 20px 10px rgba(20, 0, 255, 0.42);
+}
+.card2:hover{
+    box-shadow: 0 0 20px 10px rgba(255, 245, 0, 0.46);
+}
+.card3:hover{
+    box-shadow: 0 0 20px 10px rgba(255, 0, 229, 0.40);
+}
+.card4:hover{
+    box-shadow: 0 0 20px 10px rgba(255, 0, 0, 0.61);
+}
 .popUp{
     background-color: rgb(0, 0, 0);
     position: fixed;
