--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    background-image: url(backd.png);
+    background-image: url(./allPhotos/backd.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
