--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
     background-repeat: no-repeat;
     background-size:cover;
     height: 100vh;
-    font-family: "DM Serif Display";
+    font-family: 'Kanit', sans-serif;
     /* overflow: hidden; */
 }
 .hidden{
@@ -19,6 +19,7 @@ h1,p,.fa-brands {
     color: #DCF117;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin: 0;
+    font-family: 'Kanit', sans-serif;
 }
 h1{
     font-size: 2rem;
@@ -111,6 +112,7 @@ h6{
 .card img,.card-video{
     width: 90%; /* Make the image fill the entire width of the card */
     height: 80%; /* Maintain the aspect ratio */
+    /* min-height: 80%; */
     border-radius: 10px; /* Apply border-radius to the image, matching the card */
     margin: 5% auto 0;
 }
@@ -134,7 +136,7 @@ h6{
     box-shadow: 0 0 20px 10px rgba(255, 0, 0, 0.61);
 }
 .popUp{
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0,0.60);
     position: fixed;
     width: 18%;
     height: auto;
@@ -165,6 +167,7 @@ h6{
     width: auto;
     font-size: 0.9vw;
     border-radius: 10px;
+    font-family: 'Kanit', sans-serif;
   }
 .card-video{
     display: none;
